--- a/views/admin/nova-vaga.ejs
+++ b/views/admin/nova-vaga.ejs
@@ -12,7 +12,7 @@
     <input name="titulo" id="titulo" type="text"><br>
 
     <label for="descricao">Descrição:</label>
-    <textarea name="descricap" id="decricao" cols="30" rows="10"></textarea><br>
+    <textarea name="descricao" id="decricao" cols="30" rows="10"></textarea><br>
     
     <label for="categoria">Categoria:</label>
     <select name="categoria" id="categoria">
