--- a/views/admin/nova-categoria.ejs
+++ b/views/admin/nova-categoria.ejs
@@ -1,17 +1,17 @@
 <%- include('header') %>
 
 <h2>
-    Nova Categoria:
-    <a href="/admin/Categorias">Categorias</a>
+    New Category:
+    <a href="javascript:history.back()"> <span> Back </span></a>
 </h2>
 
 <div>
 <form action="" method="post">
 
-    <label for="categoria">Categoria:</label>
+    <label for="categoria">Category:</label>
     <input name="categoria" id="categoria" type="text"><br>
 
-    <button type="submit">Salvar categoria</button>
+    <button type="submit">Save category</button>
 </form>
 </div>
 
