--- a/views/admin/editar-categoria.ejs
+++ b/views/admin/editar-categoria.ejs
@@ -1,17 +1,17 @@
 <%- include('header') %>
 
 <h2>
-    Editar Categoria:
-    <a href="/admin/categorias">Categorias</a>
+    Edit Category:
+    <a href="javascript:history.back()"> <span> Back </span></a>
 </h2>
 
 <div>
 <form action="" method="post">
 
-    <label for="categoria">Categoria:</label>
+    <label for="categoria">Category:</label>
     <input name="categoria" id="categoria" type="text" value="<%- categoria.categoria %>"><br>
 
-    <button type="submit">Salvar categoria</button>
+    <button type="submit">Update category</button>
 </form>
 </div>
 
