--- a/views/admin/editar-vaga.ejs
+++ b/views/admin/editar-vaga.ejs
@@ -1,20 +1,20 @@
 <%- include('header') %>
 
 <h2>
-    Editar Vaga:
-    <a href="/admin/vagas">Vagas</a>
+    Edit Role:
+    <a href="javascript:history.back()"> <span> Back </span></a>
 </h2>
 
 <div>
 <form action="" method="post">
 
-    <label for="titulo">Título:</label>
+    <label for="titulo">Title:</label>
     <input name="titulo" id="titulo" type="text" value="<%- vaga.titulo %>"><br>
 
-    <label for="descricao">Descrição:</label>
+    <label for="descricao">Description:</label>
     <textarea name="descricao" id="decricao" cols="30" rows="10"><%- vaga.descricao %></textarea><br>
     
-    <label for="categoria">Categoria:</label>
+    <label for="categoria">Category:</label>
     <select name="categoria" id="categoria">
 
         <% categorias.forEach(categoria =>{ %>
@@ -22,7 +22,7 @@
         <% }) %>
     </select><br>
 
-    <button type="submit">Salvar vaga</button>
+    <button type="submit">Update role</button>
 </form>
 </div>
 
