--- a/views/admin/home.ejs
+++ b/views/admin/home.ejs
@@ -3,8 +3,8 @@
 <h2>Admin:</h2>
 <div>
     <ul>
-        <li> <a href="/admin/categorias">Gerenciar categorias</a></li>
-        <li> <a href="/admin/vagas">Gerenciar vagas</a></li>
+        <li> <a href="/admin/categorias">Manage categories</a></li>
+        <li> <a href="/admin/vagas">Manage roles</a></li>
     </ul>
 </div>
 <%- include('footer') %>
