--- a/views/admin/vagas.ejs
+++ b/views/admin/vagas.ejs
@@ -1,8 +1,8 @@
 <%- include('header') %>
 
 <h2>
-    Admin Vagas:
-    <a href="/admin/vagas/nova">Nova Vaga</a>
+    Admin Roles:
+    <a href="/admin/vagas/nova"><span>Add New Role</span></a> | <a href="javascript:history.back()"> <span> Back </span></a>
 </h2>
 
 <div>
@@ -10,8 +10,8 @@
         <% vagas.forEach(vaga => { %>
         <li>
             <%- vaga.titulo %> | 
-            <a href="/admin/vagas/delete/<%- vaga.id %>">Excluir</a>
-            <a href="/admin/vagas/editar/<%- vaga.id %>">Editar</a>
+            <a href="/admin/vagas/delete/<%- vaga.id %>" onclick="return confirm ('Do you want to delete?')">Delete</a>
+            <a href="/admin/vagas/editar/<%- vaga.id %>">Edit</a>
         </li>
         <% }) %>
     </ul>
